--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-markovify==1.1.1
+#markovify==1.1.1
+git+https://github.com/carsayao/markovify.git
 simplejson==3.16.0
-nltk==3.3.4
+nltk==3.4.4
 numpy==1.16.4
 # run the following command:
 # pip3 install -r requirements.txt
