--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "js-yaml": "^3.13.1",
+    "nodemon": "^2.0.2",
     "socketio": "^1.0.0"
   }
 }
